remove constructs in favor of lombok (#2592)